# bl-compiler

./: #test.bl#  .gitattributes  .gitignore  CMakeLists.txt  Makefile.in  README  README.md  bl-mode.el  bnf  configure  configure.ac  owner  test.bl
autom4te.cache/: output.1  output.2  traces.0  traces.1
bl_sources/: array.bl  comment.bl  fib  fib.bl  fib.s  import.bl  int.bl  pi  pi.bl  pi.s  prime  prime.bl  prime.s  semantic_array.bl  semantic_invalid.bl  semantic_valid.bl  string.bl  type-cast.bl
include/: ast_node.hpp  code_generator.hpp  lexer.hpp  parser.hpp  scope.hpp  semantic_analyser.hpp  semantic_analyzer.hpp  symbol.hpp  symbol_kind.hpp  symbol_table.hpp  symbol_table_generator.hpp  token.hpp  token_type.hpp  type.hpp  type_checker.hpp
include/lexer/: lexer.h  lexer.hpp  token.h  token.hpp  token_type.h
include/parser/: ast_node.h  ast_node.hpp  node_type.h  parser.h  parser.hpp
include/semantic/: scope.h  semantic_analyzer.hpp  symbol.h  symbol_table.h  symbol_type.h
lib/: stdio.bl
src/: #main.cpp#  Makefile.am  Makefile.in  code_generator.cpp  lexer.cpp  main.cpp  parser.cpp  scope.cpp  semantic_analyser.cpp  semantic_analyzer.cpp  symbol.cpp  symbol_table.cpp  symbol_table_generator.cpp  type_checker.cpp
src/lexer/: lexer.cpp
src/parser/: parser.cpp
src/semantic/: scope.cpp  semantic_analyzer.cpp  symbol.cpp  symbol_table.cpp
